--- a/src/Components/Cards/cards.scss
+++ b/src/Components/Cards/cards.scss
@@ -1,7 +1,7 @@
 .cards {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
 }
 
